# BEACH

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  SKILLS.md  SPEC.md  build.sh  ford.md  fpm.toml  install.sh  pyproject.toml  setup.py
.agents/plugins/: marketplace.json
.claude/agents/: docs-spec-writer.md  fortran-simulation-engineer.md  hpc-performance-reviewer.md  orchestrator-lead.md  param-config-architect.md  python-postprocess-viz.md  refactoring-planner.md  validation-regression-analyst.md
.github/workflows/: fortran-docs.yml  fortran-format.yml  publish-pypi.yml
app/: main.f90
beach/: __init__.py  cli_animate_fortran_history.py  cli_estimate_fortran_workload.py  cli_inspect_fortran_output.py  cli_plot_coulomb_force_matrix.py  cli_plot_fortran_potential_slices.py  cli_plot_performance_profile.py  closepack_config.py  fortran_results.py  injection.py
beach/cli/: __init__.py  _shared.py  analyze_coulomb_mobility.py  animate_fortran_history.py  config.py  estimate_fortran_workload.py  inspect_fortran_output.py  kernel_forces.py  legacy.py  lint.py  main.py  model.py  model_close_pack.py  plot_coulomb_force_matrix.py  plot_fortran_potential_slices.py  plot_performance_profile.py  preset.py
beach/config/: _toml.py  (+2 more)
bemtracer/: __init__.py  core.py  fortran_results.py  geometry.py  importers.py  injection.py
docs/: agent-user-guide.md  batch_duration_stability.md  config_workflow.md  fortran_dependency_map.md  fortran_fmm_core.md  fortran_parameter_file.md  fortran_workflow.md  index.md  python_postprocess_api.md  requirements.txt
env/: README.md  camphor.env  common.env  profile.template.env
examples/: animate_fortran_history.py  beach.toml  estimate_fortran_workload.py  fortran_config.nml  fortran_config.toml  generate_closepack_config.py  inspect_fortran_output.py  minimal_run.py  plot_coulomb_force_matrix.py  plot_fortran_potential_slices.py  plot_mesh_source_boxplot.py  plot_performance_profile.py  random_injection_shifted_maxwell.py  template_meshes.py  velocity_grid.csv  visualize_bem_list_3d.py
plugins/: README.en.md  README.md
schemas/: beach.case.schema.json  beach.preset.schema.json  beach.schema.json
src/: README.md  bem_app_config.f90  bem_app_config_parser.f90  bem_app_config_runtime.f90  bem_app_config_types.f90  bem_boundary.f90  bem_collision.f90  bem_constants.f90  bem_field.f90  bem_importers.f90  bem_injection.f90  bem_kinds.f90  bem_mesh.f90  bem_particles.f90  bem_pusher.f90  bem_restart.f90  bem_simulator.f90  bem_templates.f90  bem_types.f90
test/: test_app_config_parser.f90  test_boundary.f90  test_dynamics.f90  test_injection_sampling.f90  test_reservoir_injection.f90  test_restart.f90  test_simulator.f90  test_support.f90  test_templates_importers_runtime.f90
tests/: test_estimate_fortran_workload.py  test_fortran_results.py  test_geometry_templates.py  test_injection.py
tools/: generate_fortran_dependency_report.py
(+184 files in other folders)
