[build-system]
requires = ["setuptools>=68", "wheel", "fpm"]
build-backend = "setuptools.build_meta"

[project]
name = "beach"
version = "0.6.0"
description = "BEACH (BEM + Accumulated CHarge): BEM surface-charging + test-particle prototype (insulator mode) with hybrid E-field and Boris pusher."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
beach-inspect = "beach.cli_inspect_fortran_output:main"
beach-animate-history = "beach.cli_animate_fortran_history:main"
beach-plot-potential-slices = "beach.cli_plot_fortran_potential_slices:main"
beach-estimate-workload = "beach.cli_estimate_fortran_workload:main"

[tool.setuptools]
packages = ["beach"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
