[build-system]
requires = ["setuptools>=68", "wheel", "fpm"]
build-backend = "setuptools.build_meta"

[project]
name = "beach-bem"
version = "0.7.3"
description = "BEACH (BEM + Accumulated CHarge): BEM surface-charging + test-particle prototype (insulator mode) with hybrid E-field and Boris pusher."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
beachx = "beach.cli.main:main"
beach-inspect = "beach.cli.legacy:inspect_main"
beach-animate-history = "beach.cli.legacy:animate_main"
beach-plot-coulomb-force-matrix = "beach.cli.legacy:coulomb_main"
beach-plot-potential-slices = "beach.cli.legacy:slices_main"
beach-estimate-workload = "beach.cli.legacy:workload_main"
beach-plot-performance-profile = "beach.cli.legacy:profile_main"

[tool.setuptools]
packages = ["beach", "beach.fortran_results", "beach.cli", "beach.config"]

[tool.setuptools.package-data]
"beach.config" = ["presets/**/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
